[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/DialogueTool/scripts/graph_control.gd" type="Script" id=1]
[ext_resource path="res://addons/DialogueTool/scripts/conversations_list.gd" type="Script" id=2]
[ext_resource path="res://addons/DialogueTool/scripts/actors_list.gd" type="Script" id=3]
[ext_resource path="res://addons/DialogueTool/scenes/popup.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/DialogueTool/scripts/modal.gd" type="Script" id=5]
[ext_resource path="res://addons/DialogueTool/scenes/node_popup.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/DialogueTool/scripts/scenes_list.gd" type="Script" id=7]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="GraphContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 1010.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GraphArea" type="GraphEdit" parent="PanelContainer/VBoxContainer/GraphContainer"]
margin_right = 856.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3
right_disconnects = true
scroll_offset = Vector2( -13, -88 )
script = ExtResource( 1 )

[node name="ListsContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/GraphContainer"]
margin_left = 860.0
margin_right = 1010.0
margin_bottom = 562.0
rect_min_size = Vector2( 150, 0 )

[node name="ScenesLabel" type="Label" parent="PanelContainer/VBoxContainer/GraphContainer/ListsContainer"]
margin_right = 150.0
margin_bottom = 14.0
text = "Scenes"
align = 1

[node name="ScenesList" type="ItemList" parent="PanelContainer/VBoxContainer/GraphContainer/ListsContainer"]
margin_top = 18.0
margin_right = 150.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 7 )

[node name="ScenesListbuttons" type="HBoxContainer" parent="PanelContainer/VBoxContainer/GraphContainer/ListsContainer"]
margin_top = 164.0
margin_right = 150.0
margin_bottom = 184.0
alignment = 1

[node name="AddScene" type="Button" parent="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ScenesListbuttons"]
margin_left = 25.0
margin_right = 45.0
margin_bottom = 20.0
text = "+"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ScenesListbuttons"]
margin_left = 49.0
margin_right = 53.0
margin_bottom = 20.0

[node name="RemoveScene" type="Button" parent="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ScenesListbuttons"]
margin_left = 57.0
margin_right = 77.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
text = "-"

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ScenesListbuttons"]
margin_left = 81.0
margin_right = 85.0
margin_bottom = 20.0

[node name="EditScene" type="Button" parent="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ScenesListbuttons"]
margin_left = 89.0
margin_right = 125.0
margin_bottom = 20.0
text = "Edit"

[node name="ConversationsLabel" type="Label" parent="PanelContainer/VBoxContainer/GraphContainer/ListsContainer"]
margin_top = 188.0
margin_right = 150.0
margin_bottom = 202.0
text = "Conversations"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConversationsList" type="ItemList" parent="PanelContainer/VBoxContainer/GraphContainer/ListsContainer"]
margin_top = 206.0
margin_right = 150.0
margin_bottom = 348.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="ConversationsListButtons" type="HBoxContainer" parent="PanelContainer/VBoxContainer/GraphContainer/ListsContainer"]
margin_top = 352.0
margin_right = 150.0
margin_bottom = 372.0
alignment = 1

[node name="AddConversations" type="Button" parent="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ConversationsListButtons"]
margin_left = 25.0
margin_right = 45.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
text = "+"

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ConversationsListButtons"]
margin_left = 49.0
margin_right = 53.0
margin_bottom = 20.0

[node name="RemoveConversation" type="Button" parent="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ConversationsListButtons"]
margin_left = 57.0
margin_right = 77.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
text = "-"

[node name="VSeparator3" type="VSeparator" parent="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ConversationsListButtons"]
margin_left = 81.0
margin_right = 85.0
margin_bottom = 20.0

[node name="EditConversation" type="Button" parent="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ConversationsListButtons"]
margin_left = 89.0
margin_right = 125.0
margin_bottom = 20.0
text = "Edit"

[node name="ActorsLabel" type="Label" parent="PanelContainer/VBoxContainer/GraphContainer/ListsContainer"]
margin_top = 376.0
margin_right = 150.0
margin_bottom = 390.0
text = "Actors"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActorsList" type="ItemList" parent="PanelContainer/VBoxContainer/GraphContainer/ListsContainer"]
margin_top = 394.0
margin_right = 150.0
margin_bottom = 536.0
hint_tooltip = "List of actors available in the game."
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="ActorsListButtons" type="HBoxContainer" parent="PanelContainer/VBoxContainer/GraphContainer/ListsContainer"]
margin_top = 540.0
margin_right = 150.0
margin_bottom = 560.0
alignment = 1

[node name="AddActor" type="Button" parent="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ActorsListButtons"]
margin_left = 25.0
margin_right = 45.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
text = "+"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ActorsListButtons"]
margin_left = 49.0
margin_right = 53.0
margin_bottom = 20.0

[node name="RemoveActor" type="Button" parent="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ActorsListButtons"]
margin_left = 57.0
margin_right = 77.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
text = "-"

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ActorsListButtons"]
margin_left = 81.0
margin_right = 85.0
margin_bottom = 20.0

[node name="EditActor" type="Button" parent="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ActorsListButtons"]
margin_left = 89.0
margin_right = 125.0
margin_bottom = 20.0
text = "Edit"

[node name="ButtonsContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 566.0
margin_right = 1010.0
margin_bottom = 586.0
custom_constants/separation = 13

[node name="AddNode" type="Button" parent="PanelContainer/VBoxContainer/ButtonsContainer"]
margin_right = 75.0
margin_bottom = 20.0
text = "Add Node"

[node name="SaveConversation" type="Button" parent="PanelContainer/VBoxContainer/ButtonsContainer"]
margin_left = 88.0
margin_right = 216.0
margin_bottom = 20.0
text = "Save Conversation"

[node name="ExportConversation" type="Button" parent="PanelContainer/VBoxContainer/ButtonsContainer"]
margin_left = 229.0
margin_right = 342.0
margin_bottom = 20.0
text = "Export To Game"

[node name="Popup" parent="." instance=ExtResource( 4 )]
script = ExtResource( 5 )

[node name="NodePopup" parent="." instance=ExtResource( 6 )]
[connection signal="_end_node_move" from="PanelContainer/VBoxContainer/GraphContainer/GraphArea" to="PanelContainer/VBoxContainer/GraphContainer/GraphArea" method="_on_GraphArea__end_node_move"]
[connection signal="connection_request" from="PanelContainer/VBoxContainer/GraphContainer/GraphArea" to="PanelContainer/VBoxContainer/GraphContainer/GraphArea" method="_on_GraphArea_connection_request"]
[connection signal="disconnection_request" from="PanelContainer/VBoxContainer/GraphContainer/GraphArea" to="PanelContainer/VBoxContainer/GraphContainer/GraphArea" method="_on_GraphArea_disconnection_request"]
[connection signal="item_selected" from="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ScenesList" to="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ScenesList" method="_on_ScenesList_item_selected"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ScenesListbuttons/AddScene" to="Popup" method="_on_AddScene_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ScenesListbuttons/RemoveScene" to="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ScenesList" method="_on_RemoveScene_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ScenesListbuttons/EditScene" to="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ScenesList" method="_on_EditScene_pressed"]
[connection signal="item_selected" from="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ConversationsList" to="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ConversationsList" method="_on_ConversationsList_item_selected"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ConversationsListButtons/AddConversations" to="Popup" method="_on_AddConversations_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ConversationsListButtons/RemoveConversation" to="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ConversationsList" method="_on_RemoveConversation_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ConversationsListButtons/EditConversation" to="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ConversationsList" method="_on_EditConversation_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ActorsListButtons/AddActor" to="Popup" method="_on_AddActor_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ActorsListButtons/RemoveActor" to="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ActorsList" method="_on_RemoveActor_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ActorsListButtons/EditActor" to="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ActorsList" method="_on_EditActor_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ButtonsContainer/AddNode" to="PanelContainer/VBoxContainer/GraphContainer/GraphArea" method="_on_AddNode_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ButtonsContainer/SaveConversation" to="PanelContainer/VBoxContainer/GraphContainer/GraphArea" method="_on_SaveConversation_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ButtonsContainer/ExportConversation" to="PanelContainer/VBoxContainer/GraphContainer/GraphArea" method="_on_ExportConversation_pressed"]
[connection signal="button_pressed" from="Popup" to="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ConversationsList" method="_on_Popup_button_pressed"]
[connection signal="button_pressed" from="Popup" to="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ActorsList" method="_on_Popup_button_pressed"]
[connection signal="button_pressed" from="Popup" to="PanelContainer/VBoxContainer/GraphContainer/ListsContainer/ScenesList" method="_on_Popup_button_pressed"]
